@@ -3,7 +3,7 @@
 /*
   Part of the Processing project - http://processing.org
 
-  Copyright (c) 2012-15 The Processing Foundation
+  Copyright (c) 2012-20 The Processing Foundation
   Copyright (c) 2004-12 Ben Fry and Casey Reas
   Copyright (c) 2001-04 Massachusetts Institute of Technology
 
@@ -24,50 +24,6 @@
 
 package processing.core;
 
-// dummy object for backwards compatibility, plus the select methods
-import java.awt.Frame;
-
-// before calling settings() to get displayWidth/Height
-import java.awt.DisplayMode;
-// handleSettings() and displayDensity()
-import java.awt.GraphicsConfiguration;
-import java.awt.GraphicsDevice;
-import java.awt.GraphicsEnvironment;
-import java.awt.geom.AffineTransform;
-// used to present the fullScreen() warning about Spaces on OS X
-import javax.swing.JOptionPane;
-
-// inside runSketch() to warn users about headless
-import java.awt.HeadlessException;
-import java.awt.Toolkit;
-
-// used by loadImage()
-import java.awt.Image;
-import java.awt.color.ColorSpace;
-import java.awt.image.BufferedImage;
-import javax.imageio.ImageIO;
-// allows us to remove our own MediaTracker code
-import javax.swing.ImageIcon;
-
-// used by selectInput(), selectOutput(), selectFolder()
-import java.awt.EventQueue;
-import java.awt.FileDialog;
-import javax.swing.JFileChooser;
-
-// set the look and feel, if specified
-import javax.swing.UIManager;
-
-// used by link()
-import java.awt.Desktop;
-
-// used by desktopFile() method
-import javax.swing.filechooser.FileSystemView;
-
-// loadXML() error handling
-import javax.xml.parsers.ParserConfigurationException;
-
-import org.xml.sax.SAXException;
-
 import java.io.*;
 import java.lang.reflect.*;
 import java.net.*;
@@ -81,6 +37,13 @@ import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.ThreadFactory;
 import java.util.regex.*;
 import java.util.zip.*;
+
+// loadXML() error handling
+import javax.xml.parsers.ParserConfigurationException;
+import org.xml.sax.SAXException;
+
+// TODO have this removed by 4.0 final
+import processing.awt.ShimAWT;
 
 import processing.data.*;
 import processing.event.*;
@@ -148,21 +111,20 @@ public class PApplet implements PConstants {
   public static final float javaVersion = 1 + javaPlatform / 10f;
 
   /**
-   * Current platform in use, one of the
-   * PConstants WINDOWS, MACOSX, MACOS9, LINUX or OTHER.
+   * Current platform in use, one of the PConstants WINDOWS, MACOS, LINUX or OTHER.
    */
   static public int platform;
 
   static {
-    String osname = System.getProperty("os.name");
+    final String name = System.getProperty("os.name");
 
-    if (osname.indexOf("Mac") != -1) {
+    if (name.contains("Mac")) {
       platform = MACOS;
 
-    } else if (osname.indexOf("Windows") != -1) {
+    } else if (name.indexOf("Windows") != -1) {
       platform = WINDOWS;
 
-    } else if (osname.equals("Linux")) {  // true for the ibm vm
+    } else if (name.equals("Linux")) {  // true for the ibm vm
       platform = LINUX;
 
     } else {
@@ -239,24 +201,6 @@ public class PApplet implements PConstants {
   static public final int DEFAULT_WIDTH = 100;
   static public final int DEFAULT_HEIGHT = 100;
 
-//  /**
-//   * Exception thrown when size() is called the first time.
-//   * <p>
-//   * This is used internally so that setup() is forced to run twice
-//   * when the renderer is changed. This is the only way for us to handle
-//   * invoking the new renderer while also in the midst of rendering.
-//   */
-//  static public class RendererChangeException extends RuntimeException { }
-
-  /**
-   * true if no size() command has been executed. This is used to wait until
-   * a size has been set before placing in the window and showing it.
-   */
-//  public boolean defaultSize;
-
-//  /** Storage for the current renderer size to avoid re-allocation. */
-//  Dimension currentSize = new Dimension();
-
   /**
    * ( begin auto-generated from pixels.xml )
    *
@@ -283,7 +227,7 @@ public class PApplet implements PConstants {
    * @see PApplet#get(int, int, int, int)
    * @see PApplet#set(int, int, int)
    * @see PImage
-   * @see PApplet#pixelDensity()
+   * @see PApplet#pixelDensity(int)
    * @see PApplet#pixelWidth
    * @see PApplet#pixelHeight
    */
@@ -756,6 +700,9 @@ public class PApplet implements PConstants {
    */
   protected boolean exitCalled;
 
+  // ok to be static because it's not possible to mix enabled/disabled
+  static protected boolean disableAWT;
+
   // messages to send if attached as an external vm
 
   /**
@@ -777,6 +724,9 @@ public class PApplet implements PConstants {
 
   /** Used by the PDE to suggest a display (set in prefs, passed on Run) */
   static public final String ARGS_DISPLAY = "--display";
+
+  /** Disable AWT so that LWJGL and others can run */
+  static public final String ARGS_DISABLE_AWT = "--disable-awt";
 
 //  static public final String ARGS_SPAN_DISPLAYS = "--span";
 
@@ -835,75 +785,11 @@ public class PApplet implements PConstants {
   }
 
 
-  /**
-   * A dummy frame to keep compatibility with 2.x code
-   * and encourage users to update.
-   */
-  public Frame frame;
-
-
-//  public Frame getFrame() {
-//    return frame;
-//  }
-//
-//
-//  public void setFrame(Frame frame) {
-//    this.frame = frame;
-//  }
-
-
-  // . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
-
-
 //  /**
-//   * Applet initialization. This can do GUI work because the components have
-//   * not been 'realized' yet: things aren't visible, displayed, etc.
+//   * A dummy frame to keep compatibility with 2.x code
+//   * and encourage users to update.
 //   */
-//  public void init() {
-////    println("init() called " + Integer.toHexString(hashCode()));
-//    // using a local version here since the class variable is deprecated
-////    Dimension screen = Toolkit.getDefaultToolkit().getScreenSize();
-////    screenWidth = screen.width;
-////    screenHeight = screen.height;
-//
-//    defaultSize = true;
-//    finished = false; // just for clarity
-//
-//    // this will be cleared by draw() if it is not overridden
-//    looping = true;
-//    redraw = true;  // draw this guy at least once
-//    firstMouse = true;
-//
-//    // calculated dynamically on first call
-////    // Removed in 2.1.2, brought back for 2.1.3. Usually sketchPath is set
-////    // inside runSketch(), but if this sketch takes care of calls to init()
-////    // when PApplet.main() is not used (i.e. it's in a Java application).
-////    // THe path needs to be set here so that loadXxxx() functions work.
-////    if (sketchPath == null) {
-////      sketchPath = calcSketchPath();
-////    }
-//
-//    // set during Surface.initFrame()
-////    // Figure out the available display width and height.
-////    // No major problem if this fails, we have to try again anyway in
-////    // handleDraw() on the first (== 0) frame.
-////    checkDisplaySize();
-//
-////    // Set the default size, until the user specifies otherwise
-////    int w = sketchWidth();
-////    int h = sketchHeight();
-////    defaultSize = (w == DEFAULT_WIDTH) && (h == DEFAULT_HEIGHT);
-////
-////    g = makeGraphics(w, h, sketchRenderer(), null, true);
-////    // Fire component resize event
-////    setSize(w, h);
-////    setPreferredSize(new Dimension(w, h));
-////
-////    width = g.width;
-////    height = g.height;
-//
-//    surface.startThread();
-//  }
+//  public Frame frame;
 
 
   // . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
@@ -912,12 +798,11 @@ public class PApplet implements PConstants {
   boolean insideSettings;
 
   String renderer = JAVA2D;
-//  int quality = 2;
   int smooth = 1;  // default smoothing (whatever that means for the renderer)
 
   boolean fullScreen;
   int display = -1;  // use default
-  GraphicsDevice[] displayDevices;
+//  GraphicsDevice[] displayDevices;
   // Unlike the others above, needs to be public to support
   // the pixelWidth and pixelHeight fields.
   public int pixelDensity = 1;
@@ -959,25 +844,13 @@ public class PApplet implements PConstants {
   void handleSettings() {
     insideSettings = true;
 
-    // Need the list of display devices to be queried already for usage below.
-    // https://github.com/processing/processing/issues/3295
-    // https://github.com/processing/processing/issues/3296
-    // Not doing this from a static initializer because it may cause
-    // PApplet to cache and the values to stick through subsequent runs.
-    // Instead make it a runtime thing and a local variable.
-    GraphicsEnvironment ge = GraphicsEnvironment.getLocalGraphicsEnvironment();
-    GraphicsDevice device = ge.getDefaultScreenDevice();
-    displayDevices = ge.getScreenDevices();
-
-    // Default or unparsed will be -1, spanning will be 0, actual displays will
-    // be numbered from 1 because it's too weird to say "display 0" in prefs.
-    if (display > 0 && display <= displayDevices.length) {
-      device = displayDevices[display-1];
+    if (!disableAWT) {
+      displayWidth = ShimAWT.getDisplayWidth();
+      displayHeight = ShimAWT.getDisplayHeight();
+    } else {
+      // https://github.com/processing/processing4/issues/57
+      System.err.println("AWT disabled, displayWidth/displayHeight will be 0");
     }
-    // Set displayWidth and displayHeight for people still using those.
-    DisplayMode displayMode = device.getDisplayMode();
-    displayWidth = displayMode.getWidth();
-    displayHeight = displayMode.getHeight();
 
     // Here's where size(), fullScreen(), smooth(N) and noSmooth() might
     // be called, conjuring up the demons of various rendering configurations.
@@ -991,7 +864,7 @@ public class PApplet implements PConstants {
       BufferedReader errReader = createReader(p.getErrorStream());
       StringBuilder stdout = new StringBuilder();
       StringBuilder stderr = new StringBuilder();
-      String line = null;
+      String line;
       try {
         while ((line = outReader.readLine()) != null) {
           stdout.append(line);
@@ -1006,23 +879,20 @@ public class PApplet implements PConstants {
       int resultCode = -1;
       try {
         resultCode = p.waitFor();
-      } catch (InterruptedException e) { }
+      } catch (InterruptedException ignored) { }
 
-      String result = trim(stdout.toString());
-      if ("0".equals(result)) {
-        EventQueue.invokeLater(new Runnable() {
-          public void run() {
-            checkLookAndFeel();
-            final String msg =
-              "To use fullScreen(SPAN), first turn off “Displays have separate spaces”\n" +
-              "in System Preferences \u2192 Mission Control. Then log out and log back in.";
-            JOptionPane.showMessageDialog(null, msg, "Apple's Defaults Stink",
-                                          JOptionPane.WARNING_MESSAGE);
-          }
-        });
-      } else if (!"1".equals(result)) {
+      if (resultCode == 1) {
         System.err.println("Could not check the status of “Displays have separate spaces.”");
         System.err.format("Received message '%s' and result code %d.%n", trim(stderr.toString()), resultCode);
+      }
+
+      String processOutput = trim(stdout.toString());
+      // It looks like on Catalina, the option may not be set, so resultCode
+      // will be 1 (an error, since the param doesn't exist. But "Displays
+      // have separate spaces" is on by default, so show the message.
+      if (resultCode == 1 || "0".equals(processOutput)) {
+        System.err.println("To use fullScreen(SPAN), first turn off “Displays have separate spaces”");
+        System.err.println("in System Preferences \u2192 Mission Control. Then log out and log back in.");
       }
     }
 
@@ -1066,17 +936,6 @@ public class PApplet implements PConstants {
   }
 
 
-  // Named quality instead of smooth to avoid people trying to set (or get)
-  // the current smooth level this way. Also that smooth(number) isn't really
-  // public or well-known API. It's specific to the capabilities of the
-  // rendering surface, and somewhat independent of whether the sketch is
-  // smoothing at any given time. It's also a bit like getFill() would return
-  // true/false for whether fill was enabled, getFillColor() would return the
-  // color itself. Or at least that's what I can recall at the moment. [fry]
-//  public int sketchQuality() {
-//    //return 2;
-//    return quality;
-//  }
   // smoothing 1 is default.. 0 is none.. 2,4,8 depend on renderer
   final public int sketchSmooth() {
     return smooth;
@@ -1084,18 +943,8 @@ public class PApplet implements PConstants {
 
 
   final public boolean sketchFullScreen() {
-    //return false;
     return fullScreen;
   }
-
-
-//  // Could be named 'screen' instead of display since it's the people using
-//  // full screen who will be looking for it. On the other hand, screenX/Y/Z
-//  // makes things confusing, and if 'displayIndex' exists...
-//  public boolean sketchSpanDisplays() {
-//    //return false;
-//    return spanDisplays;
-//  }
 
 
   // Numbered from 1, SPAN (0) means all displays, -1 means the default display
@@ -1105,13 +954,11 @@ public class PApplet implements PConstants {
 
 
   final public String sketchOutputPath() {
-    //return null;
     return outputPath;
   }
 
 
   final public OutputStream sketchOutputStream() {
-    //return null;
     return outputStream;
   }
 
@@ -1146,8 +993,16 @@ public class PApplet implements PConstants {
     if (display != SPAN && (fullScreen || present)) {
       return displayDensity(display);
     }
+
+    int displayCount = 0;
+    if (!disableAWT) {
+      displayCount = ShimAWT.getDisplayCount();
+    } else {
+      // https://github.com/processing/processing4/issues/57
+      System.err.println("display count needs to be implemented for non-AWT");
+    }
     // walk through all displays, use 2 if any display is 2
-    for (int i = 0; i < displayDevices.length; i++) {
+    for (int i = 0; i < displayCount; i++) {
       if (displayDensity(i+1) == 2) {
         return 2;
       }
@@ -1156,18 +1011,29 @@ public class PApplet implements PConstants {
     return 1;
   }
 
+
  /**
   * @param display the display number to check
+  * (1-indexed to match the Preferences dialog box)
   */
   public int displayDensity(int display) {
-    GraphicsDevice graphicsDevice = GraphicsEnvironment
-            .getLocalGraphicsEnvironment()
-            .getDefaultScreenDevice();
-    GraphicsConfiguration graphicsConfig = graphicsDevice
-            .getDefaultConfiguration();
+    if (!disableAWT) {
+      return ShimAWT.getDisplayDensity(display);
+    }
+    /*
+    if (display > 0 && display <= displayDevices.length) {
+      GraphicsConfiguration graphicsConfig =
+        displayDevices[display - 1].getDefaultConfiguration();
+      AffineTransform tx = graphicsConfig.getDefaultTransform();
+      return (int) Math.round(tx.getScaleX());
+    }
 
-    AffineTransform tx = graphicsConfig.getDefaultTransform();
-    return (int) Math.round(tx.getScaleX());
+    System.err.println("Display " + display + " does not exist, " +
+                       "returning 1 for displayDensity(" + display + ")");
+    */
+    // https://github.com/processing/processing4/issues/57
+    System.err.println("displayDensity() unavailable because AWT is disabled");
+    return 1;  // not the end of the world, so don't throw a RuntimeException
   }
 
 
@@ -1386,6 +1252,7 @@ public class PApplet implements PConstants {
     Object[] emptyArgs = new Object[] { };
 
 
+    @SuppressWarnings("unused")
     void handle() {
       handle(emptyArgs);
     }
@@ -1538,7 +1405,7 @@ public class PApplet implements PConstants {
   }
 
 
-  private void registerWithArgs(String name, Object o, Class<?> cargs[]) {
+  private void registerWithArgs(String name, Object o, Class<?>[] cargs) {
     Class<?> c = o.getClass();
     try {
       Method method = c.getMethod(name, cargs);
@@ -1572,8 +1439,6 @@ public class PApplet implements PConstants {
         die("No registered methods with the name " + name + "() were found.");
       }
       try {
-//      Method method = o.getClass().getMethod(name, new Class[] {});
-//      meth.remove(o, method);
         meth.remove(target);
       } catch (Exception e) {
         die("Could not unregister " + name + "() for " + target, e);
@@ -1581,18 +1446,7 @@ public class PApplet implements PConstants {
     }
   }
 
-
-  protected void handleMethods(String methodName) {
-    synchronized (registerLock) {
-      RegisteredMethods meth = registerMap.get(methodName);
-      if (meth != null) {
-        meth.handle();
-      }
-    }
-  }
-
-
-  protected void handleMethods(String methodName, Object[] args) {
+  protected void handleMethods(String methodName, Object...args) {
     synchronized (registerLock) {
       RegisteredMethods meth = registerMap.get(methodName);
       if (meth != null) {
@@ -2223,7 +2077,7 @@ public class PApplet implements PConstants {
       Class<?> rendererClass =
         Thread.currentThread().getContextClassLoader().loadClass(renderer);
 
-      Constructor<?> constructor = rendererClass.getConstructor(new Class[] { });
+      Constructor<?> constructor = rendererClass.getConstructor();
       PGraphics pg = (PGraphics) constructor.newInstance();
 
       pg.setParent(this);
@@ -2707,7 +2561,7 @@ public class PApplet implements PConstants {
       break;
     }
 
-    handleMethods("mouseEvent", new Object[] { event });
+    handleMethods("mouseEvent", event);
 
     switch (action) {
     case MouseEvent.PRESS:
@@ -2979,7 +2833,7 @@ public class PApplet implements PConstants {
     }
     */
 
-    handleMethods("keyEvent", new Object[] { event });
+    handleMethods("keyEvent", event);
 
     // if someone else wants to intercept the key, they should
     // set key to zero (or something besides the ESC).
@@ -3395,17 +3249,9 @@ public class PApplet implements PConstants {
    * @param url the complete URL, as a String in quotes
    */
   public void link(String url) {
-    try {
-      if (Desktop.isDesktopSupported()) {
-        Desktop.getDesktop().browse(new URI(url));
-      } else {
-        // Just pass it off to open() and hope for the best
-        launch(url);
-      }
-    } catch (IOException e) {
-      printStackTrace(e);
-    } catch (URISyntaxException e) {
-      printStackTrace(e);
+    if (!surface.openLink(url)) {
+      // Just pass it off to launch() and hope for the best
+      launch(url);
     }
   }
 
@@ -3824,8 +3670,8 @@ public class PApplet implements PConstants {
    */
   public void method(String name) {
     try {
-      Method method = getClass().getMethod(name, new Class[] {});
-      method.invoke(this, new Object[] { });
+      Method method = getClass().getMethod(name);
+      method.invoke(this);
 
     } catch (IllegalArgumentException e) {
       e.printStackTrace();
@@ -3860,13 +3706,7 @@ public class PApplet implements PConstants {
    * @see PApplet#noLoop()
    */
   public void thread(final String name) {
-    Thread later = new Thread() {
-      @Override
-      public void run() {
-        method(name);
-      }
-    };
-    later.start();
+    new Thread(() -> method(name)).start();
   }
 
 
@@ -5401,8 +5241,6 @@ public class PApplet implements PConstants {
   // . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
 
 
-  protected String[] loadImageFormats;
-
   /**
    * ( begin auto-generated from loadImage.xml )
    *
@@ -5444,29 +5282,14 @@ public class PApplet implements PConstants {
    * @see PGraphics#background(float, float, float, float)
    */
   public PImage loadImage(String filename) {
-//    return loadImage(filename, null, null);
     return loadImage(filename, null);
   }
 
-//  /**
-//   * @param extension the type of image to load, for example "png", "gif", "jpg"
-//   */
-//  public PImage loadImage(String filename, String extension) {
-//    return loadImage(filename, extension, null);
-//  }
-
-//  /**
-//   * @nowebref
-//   */
-//  public PImage loadImage(String filename, Object params) {
-//    return loadImage(filename, null, params);
-//  }
 
   /**
    * @param extension type of image to load, for example "png", "gif", "jpg"
    */
-  public PImage loadImage(String filename, String extension) { //, Object params) {
-
+  public PImage loadImage(String filename, String extension) {
     // awaitAsyncSaveCompletion() has to run on the main thread, because P2D
     // and P3D call GL functions. If this runs on background, requestImage()
     // already called awaitAsyncSaveCompletion() on the main thread.
@@ -5474,127 +5297,7 @@ public class PApplet implements PConstants {
       g.awaitAsyncSaveCompletion(filename);
     }
 
-    if (extension == null) {
-      String lower = filename.toLowerCase();
-      int dot = filename.lastIndexOf('.');
-      if (dot == -1) {
-        extension = "unknown";  // no extension found
-
-      } else {
-        extension = lower.substring(dot + 1);
-
-        // check for, and strip any parameters on the url, i.e.
-        // filename.jpg?blah=blah&something=that
-        int question = extension.indexOf('?');
-        if (question != -1) {
-          extension = extension.substring(0, question);
-        }
-      }
-    }
-
-    // just in case. them users will try anything!
-    extension = extension.toLowerCase();
-
-    if (extension.equals("tga")) {
-      try {
-        PImage image = loadImageTGA(filename);
-//        if (params != null) {
-//          image.setParams(g, params);
-//        }
-        return image;
-      } catch (IOException e) {
-        printStackTrace(e);
-        return null;
-      }
-    }
-
-    if (extension.equals("tif") || extension.equals("tiff")) {
-      byte bytes[] = loadBytes(filename);
-      PImage image =  (bytes == null) ? null : PImage.loadTIFF(bytes);
-//      if (params != null) {
-//        image.setParams(g, params);
-//      }
-      return image;
-    }
-
-    // For jpeg, gif, and png, load them using createImage(),
-    // because the javax.imageio code was found to be much slower.
-    // http://dev.processing.org/bugs/show_bug.cgi?id=392
-    try {
-      if (extension.equals("jpg") || extension.equals("jpeg") ||
-          extension.equals("gif") || extension.equals("png") ||
-          extension.equals("unknown")) {
-        byte bytes[] = loadBytes(filename);
-        if (bytes == null) {
-          return null;
-        } else {
-          //Image awtImage = Toolkit.getDefaultToolkit().createImage(bytes);
-          Image awtImage = new ImageIcon(bytes).getImage();
-
-          if (awtImage instanceof BufferedImage) {
-            BufferedImage buffImage = (BufferedImage) awtImage;
-            int space = buffImage.getColorModel().getColorSpace().getType();
-            if (space == ColorSpace.TYPE_CMYK) {
-              System.err.println(filename + " is a CMYK image, " +
-                                 "only RGB images are supported.");
-              return null;
-              /*
-              // wishful thinking, appears to not be supported
-              // https://community.oracle.com/thread/1272045?start=0&tstart=0
-              BufferedImage destImage =
-                new BufferedImage(buffImage.getWidth(),
-                                  buffImage.getHeight(),
-                                  BufferedImage.TYPE_3BYTE_BGR);
-              ColorConvertOp op = new ColorConvertOp(null);
-              op.filter(buffImage, destImage);
-              image = new PImage(destImage);
-              */
-            }
-          }
-
-          PImage image = new PImage(awtImage);
-          if (image.width == -1) {
-            System.err.println("The file " + filename +
-                               " contains bad image data, or may not be an image.");
-          }
-
-          // if it's a .gif image, test to see if it has transparency
-          if (extension.equals("gif") || extension.equals("png") ||
-              extension.equals("unknown")) {
-            image.checkAlpha();
-          }
-
-//          if (params != null) {
-//            image.setParams(g, params);
-//          }
-          image.parent = this;
-          return image;
-        }
-      }
-    } catch (Exception e) {
-      // show error, but move on to the stuff below, see if it'll work
-      printStackTrace(e);
-    }
-
-    if (loadImageFormats == null) {
-      loadImageFormats = ImageIO.getReaderFormatNames();
-    }
-    if (loadImageFormats != null) {
-      for (int i = 0; i < loadImageFormats.length; i++) {
-        if (extension.equals(loadImageFormats[i])) {
-          return loadImageIO(filename);
-//          PImage image = loadImageIO(filename);
-//          if (params != null) {
-//            image.setParams(g, params);
-//          }
-//          return image;
-        }
-      }
-    }
-
-    // failed, could not load image after all those attempts
-    System.err.println("Could not find a method to load " + filename);
-    return null;
+    return surface.loadImage(filename, extension);
   }
 
 
@@ -5640,11 +5343,7 @@ public class PApplet implements PConstants {
 
     // if the image loading thread pool hasn't been created, create it
     if (requestImagePool == null) {
-      ThreadFactory factory = new ThreadFactory() {
-        public Thread newThread(Runnable r) {
-          return new Thread(r, REQUEST_IMAGE_THREAD_PREFIX);
-        }
-      };
+      ThreadFactory factory = r -> new Thread(r, REQUEST_IMAGE_THREAD_PREFIX);
       requestImagePool = Executors.newFixedThreadPool(4, factory);
     }
     requestImagePool.execute(() -> {
@@ -5668,250 +5367,6 @@ public class PApplet implements PConstants {
     });
     return vessel;
   }
-
-
-  /**
-   * Use Java 1.4 ImageIO methods to load an image.
-   */
-  protected PImage loadImageIO(String filename) {
-    InputStream stream = createInput(filename);
-    if (stream == null) {
-      System.err.println("The image " + filename + " could not be found.");
-      return null;
-    }
-
-    try {
-      BufferedImage bi = ImageIO.read(stream);
-      PImage outgoing = new PImage(bi.getWidth(), bi.getHeight());
-      outgoing.parent = this;
-
-      bi.getRGB(0, 0, outgoing.width, outgoing.height,
-                outgoing.pixels, 0, outgoing.width);
-
-      // check the alpha for this image
-      // was gonna call getType() on the image to see if RGB or ARGB,
-      // but it's not actually useful, since gif images will come through
-      // as TYPE_BYTE_INDEXED, which means it'll still have to check for
-      // the transparency. also, would have to iterate through all the other
-      // types and guess whether alpha was in there, so.. just gonna stick
-      // with the old method.
-      outgoing.checkAlpha();
-
-      stream.close();
-      // return the image
-      return outgoing;
-
-    } catch (Exception e) {
-      printStackTrace(e);
-      return null;
-    }
-  }
-
-
-  /**
-   * Targa image loader for RLE-compressed TGA files.
-   * <p>
-   * Rewritten for 0115 to read/write RLE-encoded targa images.
-   * For 0125, non-RLE encoded images are now supported, along with
-   * images whose y-order is reversed (which is standard for TGA files).
-   * <p>
-   * A version of this function is in MovieMaker.java. Any fixes here
-   * should be applied over in MovieMaker as well.
-   * <p>
-   * Known issue with RLE encoding and odd behavior in some apps:
-   * https://github.com/processing/processing/issues/2096
-   * Please help!
-   */
-  protected PImage loadImageTGA(String filename) throws IOException {
-    InputStream is = createInput(filename);
-    if (is == null) return null;
-
-    byte header[] = new byte[18];
-    int offset = 0;
-    do {
-      int count = is.read(header, offset, header.length - offset);
-      if (count == -1) return null;
-      offset += count;
-    } while (offset < 18);
-
-    /*
-      header[2] image type code
-      2  (0x02) - Uncompressed, RGB images.
-      3  (0x03) - Uncompressed, black and white images.
-      10 (0x0A) - Run-length encoded RGB images.
-      11 (0x0B) - Compressed, black and white images. (grayscale?)
-
-      header[16] is the bit depth (8, 24, 32)
-
-      header[17] image descriptor (packed bits)
-      0x20 is 32 = origin upper-left
-      0x28 is 32 + 8 = origin upper-left + 32 bits
-
-        7  6  5  4  3  2  1  0
-      128 64 32 16  8  4  2  1
-    */
-
-    int format = 0;
-
-    if (((header[2] == 3) || (header[2] == 11)) &&  // B&W, plus RLE or not
-        (header[16] == 8) &&  // 8 bits
-        ((header[17] == 0x8) || (header[17] == 0x28))) {  // origin, 32 bit
-      format = ALPHA;
-
-    } else if (((header[2] == 2) || (header[2] == 10)) &&  // RGB, RLE or not
-               (header[16] == 24) &&  // 24 bits
-               ((header[17] == 0x20) || (header[17] == 0))) {  // origin
-      format = RGB;
-
-    } else if (((header[2] == 2) || (header[2] == 10)) &&
-               (header[16] == 32) &&
-               ((header[17] == 0x8) || (header[17] == 0x28))) {  // origin, 32
-      format = ARGB;
-    }
-
-    if (format == 0) {
-      System.err.println("Unknown .tga file format for " + filename);
-                         //" (" + header[2] + " " +
-                         //(header[16] & 0xff) + " " +
-                         //hex(header[17], 2) + ")");
-      return null;
-    }
-
-    int w = ((header[13] & 0xff) << 8) + (header[12] & 0xff);
-    int h = ((header[15] & 0xff) << 8) + (header[14] & 0xff);
-    PImage outgoing = createImage(w, h, format);
-
-    // where "reversed" means upper-left corner (normal for most of
-    // the modernized world, but "reversed" for the tga spec)
-    //boolean reversed = (header[17] & 0x20) != 0;
-    // https://github.com/processing/processing/issues/1682
-    boolean reversed = (header[17] & 0x20) == 0;
-
-    if ((header[2] == 2) || (header[2] == 3)) {  // not RLE encoded
-      if (reversed) {
-        int index = (h-1) * w;
-        switch (format) {
-        case ALPHA:
-          for (int y = h-1; y >= 0; y--) {
-            for (int x = 0; x < w; x++) {
-              outgoing.pixels[index + x] = is.read();
-            }
-            index -= w;
-          }
-          break;
-        case RGB:
-          for (int y = h-1; y >= 0; y--) {
-            for (int x = 0; x < w; x++) {
-              outgoing.pixels[index + x] =
-                is.read() | (is.read() << 8) | (is.read() << 16) |
-                0xff000000;
-            }
-            index -= w;
-          }
-          break;
-        case ARGB:
-          for (int y = h-1; y >= 0; y--) {
-            for (int x = 0; x < w; x++) {
-              outgoing.pixels[index + x] =
-                is.read() | (is.read() << 8) | (is.read() << 16) |
-                (is.read() << 24);
-            }
-            index -= w;
-          }
-        }
-      } else {  // not reversed
-        int count = w * h;
-        switch (format) {
-        case ALPHA:
-          for (int i = 0; i < count; i++) {
-            outgoing.pixels[i] = is.read();
-          }
-          break;
-        case RGB:
-          for (int i = 0; i < count; i++) {
-            outgoing.pixels[i] =
-              is.read() | (is.read() << 8) | (is.read() << 16) |
-              0xff000000;
-          }
-          break;
-        case ARGB:
-          for (int i = 0; i < count; i++) {
-            outgoing.pixels[i] =
-              is.read() | (is.read() << 8) | (is.read() << 16) |
-              (is.read() << 24);
-          }
-          break;
-        }
-      }
-
-    } else {  // header[2] is 10 or 11
-      int index = 0;
-      int px[] = outgoing.pixels;
-
-      while (index < px.length) {
-        int num = is.read();
-        boolean isRLE = (num & 0x80) != 0;
-        if (isRLE) {
-          num -= 127;  // (num & 0x7F) + 1
-          int pixel = 0;
-          switch (format) {
-          case ALPHA:
-            pixel = is.read();
-            break;
-          case RGB:
-            pixel = 0xFF000000 |
-              is.read() | (is.read() << 8) | (is.read() << 16);
-            //(is.read() << 16) | (is.read() << 8) | is.read();
-            break;
-          case ARGB:
-            pixel = is.read() |
-              (is.read() << 8) | (is.read() << 16) | (is.read() << 24);
-            break;
-          }
-          for (int i = 0; i < num; i++) {
-            px[index++] = pixel;
-            if (index == px.length) break;
-          }
-        } else {  // write up to 127 bytes as uncompressed
-          num += 1;
-          switch (format) {
-          case ALPHA:
-            for (int i = 0; i < num; i++) {
-              px[index++] = is.read();
-            }
-            break;
-          case RGB:
-            for (int i = 0; i < num; i++) {
-              px[index++] = 0xFF000000 |
-                is.read() | (is.read() << 8) | (is.read() << 16);
-              //(is.read() << 16) | (is.read() << 8) | is.read();
-            }
-            break;
-          case ARGB:
-            for (int i = 0; i < num; i++) {
-              px[index++] = is.read() | //(is.read() << 24) |
-                (is.read() << 8) | (is.read() << 16) | (is.read() << 24);
-              //(is.read() << 16) | (is.read() << 8) | is.read();
-            }
-            break;
-          }
-        }
-      }
-
-      if (!reversed) {
-        int[] temp = new int[w];
-        for (int y = 0; y < h/2; y++) {
-          int z = (h-1) - y;
-          System.arraycopy(px, y*w, temp, 0, w);
-          System.arraycopy(px, z*w, px, y*w, w);
-          System.arraycopy(temp, 0, px, z*w, w);
-        }
-      }
-    }
-    is.close();
-    return outgoing;
-  }
-
 
 
   //////////////////////////////////////////////////////////////
@@ -5968,13 +5423,7 @@ public class PApplet implements PConstants {
 
       // can't use catch-all exception, since it might catch the
       // RuntimeException about the incorrect case sensitivity
-    } catch (IOException e) {
-      throw new RuntimeException(e);
-
-    } catch (ParserConfigurationException e) {
-      throw new RuntimeException(e);
-
-    } catch (SAXException e) {
+    } catch (IOException | ParserConfigurationException | SAXException e) {
       throw new RuntimeException(e);
     }
   }
@@ -6205,10 +5654,9 @@ public class PApplet implements PConstants {
       String optionStr = Table.extensionOptions(true, filename, options);
       String[] optionList = trim(split(optionStr, ','));
 
-      Table dictionary = null;
       for (String opt : optionList) {
         if (opt.startsWith("dictionary=")) {
-          dictionary = loadTable(opt.substring(opt.indexOf('=') + 1), "tsv");
+          Table dictionary = loadTable(opt.substring(opt.indexOf('=') + 1), "tsv");
           return dictionary.typedParse(createInput(filename), optionStr);
         }
       }
@@ -6418,25 +5866,6 @@ public class PApplet implements PConstants {
   */
 
 
-  static private boolean lookAndFeelCheck;
-
-  /**
-   * Initialize the Look & Feel if it hasn't been already.
-   * Call this before using any Swing-related code in PApplet methods.
-   */
-  static private void checkLookAndFeel() {
-    if (!lookAndFeelCheck) {
-      if (platform == WINDOWS) {
-        // Windows is defaulting to Metal or something else awful.
-        // Which also is not scaled properly with HiDPI interfaces.
-        try {
-          UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName());
-        } catch (Exception e) { }
-      }
-      lookAndFeelCheck = true;
-    }
-  }
-
   /**
    * Open a platform-specific file chooser dialog to select a file for input.
    * After the selection is made, the selected File will be passed to the
@@ -6478,10 +5907,12 @@ public class PApplet implements PConstants {
 
   public void selectInput(String prompt, String callback,
                           File file, Object callbackObject) {
-    selectInput(prompt, callback, file, callbackObject, null, this);  //selectFrame());
+    //selectInput(prompt, callback, file, callbackObject, null, this);
+    surface.selectInput(prompt, callback, file, callbackObject);
   }
 
 
+  /*
   static public void selectInput(String prompt, String callbackMethod,
                                  File file, Object callbackObject, Frame parent,
                                  PApplet sketch) {
@@ -6493,6 +5924,7 @@ public class PApplet implements PConstants {
                                  File file, Object callbackObject, Frame parent) {
     selectImpl(prompt, callbackMethod, file, callbackObject, parent, FileDialog.LOAD, null);
   }
+  */
 
 
   /**
@@ -6514,10 +5946,12 @@ public class PApplet implements PConstants {
 
   public void selectOutput(String prompt, String callback,
                            File file, Object callbackObject) {
-    selectOutput(prompt, callback, file, callbackObject, null, this); //selectFrame());
+    //selectOutput(prompt, callback, file, callbackObject, null, this);
+    surface.selectOutput(prompt, callback, file, callbackObject);
   }
 
 
+  /*
   static public void selectOutput(String prompt, String callbackMethod,
                                   File file, Object callbackObject, Frame parent) {
     selectImpl(prompt, callbackMethod, file, callbackObject, parent, FileDialog.SAVE, null);
@@ -6585,6 +6019,7 @@ public class PApplet implements PConstants {
       }
     });
   }
+  */
 
 
   /**
@@ -6606,10 +6041,12 @@ public class PApplet implements PConstants {
 
   public void selectFolder(String prompt, String callback,
                            File file, Object callbackObject) {
-    selectFolder(prompt, callback, file, callbackObject, null, this); //selectFrame());
+    //selectFolder(prompt, callback, file, callbackObject, null, this);
+    surface.selectFolder(prompt, callback, file, callbackObject);
   }
 
 
+  /*
   static public void selectFolder(final String prompt,
                                   final String callbackMethod,
                                   final File defaultSelection,
@@ -6668,16 +6105,17 @@ public class PApplet implements PConstants {
       }
     });
   }
+  */
 
 
-  static private void selectCallback(File selectedFile,
-                                     String callbackMethod,
-                                     Object callbackObject) {
+  static public void selectCallback(File selectedFile,
+                                    String callbackMethod,
+                                    Object callbackObject) {
     try {
       Class<?> callbackClass = callbackObject.getClass();
       Method selectMethod =
-        callbackClass.getMethod(callbackMethod, new Class[] { File.class });
-      selectMethod.invoke(callbackObject, new Object[] { selectedFile });
+        callbackClass.getMethod(callbackMethod, File.class);
+      selectMethod.invoke(callbackObject, selectedFile);
 
     } catch (IllegalAccessException iae) {
       System.err.println(callbackMethod + "() must be public");
@@ -6689,7 +6127,6 @@ public class PApplet implements PConstants {
       System.err.println(callbackMethod + "() could not be found");
     }
   }
-
 
 
   //////////////////////////////////////////////////////////////
@@ -7137,7 +6574,7 @@ public class PApplet implements PConstants {
       }
     }
 
-    InputStream stream = null;
+    InputStream stream;
 
     // Moved this earlier than the getResourceAsStream() checks, because
     // calling getResourceAsStream() on a directory lists its contents.
@@ -7171,17 +6608,15 @@ public class PApplet implements PConstants {
                                        filename + ". Rename the file " +
                                        "or change your code.");
           }
-        } catch (IOException e) { }
+        } catch (IOException ignored) { }
       }
 
       // if this file is ok, may as well just load it
-      stream = new FileInputStream(file);
-      if (stream != null) return stream;
+      return new FileInputStream(file);
 
       // have to break these out because a general Exception might
       // catch the RuntimeException being thrown above
-    } catch (IOException ioe) {
-    } catch (SecurityException se) { }
+    } catch (IOException | SecurityException ignored) { }
 
     // Using getClassLoader() prevents java from converting dots
     // to slashes or requiring a slash at the beginning.
@@ -7219,21 +6654,18 @@ public class PApplet implements PConstants {
       // an application, or as a signed applet
       try {  // first try to catch any security exceptions
         try {
-          stream = new FileInputStream(dataPath(filename));
-          if (stream != null) return stream;
-        } catch (IOException e2) { }
+          return new FileInputStream(dataPath(filename));
+        } catch (IOException ignored) { }
 
         try {
-          stream = new FileInputStream(sketchPath(filename));
-          if (stream != null) return stream;
-        } catch (Exception e) { }  // ignored
+          return new FileInputStream(sketchPath(filename));
+        } catch (Exception ignored) { }
 
         try {
-          stream = new FileInputStream(filename);
-          if (stream != null) return stream;
-        } catch (IOException e1) { }
+          return new FileInputStream(filename);
+        } catch (IOException ignored) { }
 
-      } catch (SecurityException se) { }  // online, whups
+      } catch (SecurityException ignored) { }  // online, whups
 
     } catch (Exception e) {
       printStackTrace(e);
@@ -7325,7 +6757,7 @@ public class PApplet implements PConstants {
           }
 
           if (input != null) {
-            byte[] buffer = null;
+            byte[] buffer;
             if (length != -1) {
               buffer = new byte[length];
               int count;
@@ -7548,25 +6980,20 @@ public class PApplet implements PConstants {
    * @nowebref
    */
   static public String[] loadStrings(InputStream input) {
-    try {
-      BufferedReader reader =
-        new BufferedReader(new InputStreamReader(input, "UTF-8"));
-      return loadStrings(reader);
-    } catch (IOException e) {
-      e.printStackTrace();
-    }
-    return null;
+    BufferedReader reader =
+      new BufferedReader(new InputStreamReader(input, StandardCharsets.UTF_8));
+    return loadStrings(reader);
   }
 
 
   static public String[] loadStrings(BufferedReader reader) {
     try {
-      String lines[] = new String[100];
+      String[] lines = new String[100];
       int lineCount = 0;
-      String line = null;
+      String line;
       while ((line = reader.readLine()) != null) {
         if (lineCount == lines.length) {
-          String temp[] = new String[lineCount << 1];
+          String[] temp = new String[lineCount << 1];
           System.arraycopy(lines, 0, temp, 0, lineCount);
           lines = temp;
         }
@@ -7579,7 +7006,7 @@ public class PApplet implements PConstants {
       }
 
       // resize array to appropriate amount for these lines
-      String output[] = new String[lineCount];
+      String[] output = new String[lineCount];
       System.arraycopy(lines, 0, output, 0, lineCount);
       return output;
 
@@ -7699,24 +7126,23 @@ public class PApplet implements PConstants {
 
       saveStream(targetStream, source);
       targetStream.close();
-      targetStream = null;
 
       if (target.exists()) {
         if (!target.delete()) {
-          System.err.println("Could not replace " +
-                             target.getAbsolutePath() + ".");
+          System.err.println("Could not replace " + target);
         }
       }
       if (!tempFile.renameTo(target)) {
-        System.err.println("Could not rename temporary file " +
-                           tempFile.getAbsolutePath());
+        System.err.println("Could not rename temporary file " + tempFile);
         return false;
       }
       return true;
 
     } catch (IOException e) {
       if (tempFile != null) {
-        tempFile.delete();
+        if (!tempFile.delete()) {
+          System.err.println("Could not rename temporary file " + tempFile);
+        }
       }
       e.printStackTrace();
       return false;
@@ -7780,7 +7206,9 @@ public class PApplet implements PConstants {
   static private File createTempFile(File file) throws IOException {
     File parentDir = file.getParentFile();
     if (!parentDir.exists()) {
-      parentDir.mkdirs();
+      if (!parentDir.mkdirs()) {
+        throw new IOException("Could not make directories for " + parentDir);
+      }
     }
     String name = file.getName();
     String prefix;
@@ -7811,25 +7239,29 @@ public class PApplet implements PConstants {
       tempFile = createTempFile(file);
 
       OutputStream output = createOutput(tempFile);
-      saveBytes(output, data);
-      output.close();
-      output = null;
+      if (output != null) {
+        saveBytes(output, data);
+        output.close();
+      } else {
+        System.err.println("Could not write to " + tempFile);
+      }
 
       if (file.exists()) {
         if (!file.delete()) {
-          System.err.println("Could not replace " + file.getAbsolutePath());
+          System.err.println("Could not replace " + file);
         }
       }
 
       if (!tempFile.renameTo(file)) {
-        System.err.println("Could not rename temporary file " +
-                           tempFile.getAbsolutePath());
+        System.err.println("Could not rename temporary file " + tempFile);
       }
 
     } catch (IOException e) {
       System.err.println("error saving bytes to " + file);
       if (tempFile != null) {
-        tempFile.delete();
+        if (!tempFile.delete()) {
+          System.err.println("Could not delete temporary file " + tempFile);
+        }
       }
       e.printStackTrace();
     }
@@ -7880,7 +7312,7 @@ public class PApplet implements PConstants {
    * @see PApplet#loadBytes(String)
    * @see PApplet#saveBytes(String, byte[])
    */
-  public void saveStrings(String filename, String data[]) {
+  public void saveStrings(String filename, String[] data) {
     saveStrings(saveFile(filename), data);
   }
 
@@ -7888,7 +7320,7 @@ public class PApplet implements PConstants {
   /**
    * @nowebref
    */
-  static public void saveStrings(File file, String data[]) {
+  static public void saveStrings(File file, String[] data) {
     saveStrings(createOutput(file), data);
   }
 
@@ -8018,17 +7450,15 @@ public class PApplet implements PConstants {
 
   static File desktopFolder;
 
-  /** Not a supported function. For testing use only. */
   static public File desktopFile(String what) {
     if (desktopFolder == null) {
       // Should work on Linux and OS X (on OS X, even with the localized version).
       desktopFolder = new File(System.getProperty("user.home"), "Desktop");
       if (!desktopFolder.exists()) {
-        if (platform == WINDOWS) {
-          FileSystemView filesys = FileSystemView.getFileSystemView();
-          desktopFolder = filesys.getHomeDirectory();
+        if (platform == WINDOWS && !disableAWT) {
+          desktopFolder = ShimAWT.getWindowsDesktop();
         } else {
-          throw new UnsupportedOperationException("Could not find a suitable desktop foldder");
+          throw new UnsupportedOperationException("Could not find a suitable Desktop foldder");
         }
       }
     }
@@ -8036,7 +7466,6 @@ public class PApplet implements PConstants {
   }
 
 
-  /** Not a supported function. For testing use only. */
   static public String desktopPath(String what) {
     return desktopFile(what).getAbsolutePath();
   }
@@ -8172,11 +7601,7 @@ public class PApplet implements PConstants {
   // using toURI() and URI.toURL()."
   // https://docs.oracle.com/javase/8/docs/api/java/net/URL.html
   static public String urlDecode(String str) {
-    try {
-      return URLDecoder.decode(str, "UTF-8");
-    } catch (UnsupportedEncodingException e) {  // safe per the JDK source
-      return null;
-    }
+    return URLDecoder.decode(str, StandardCharsets.UTF_8);
   }
 
 
@@ -8202,7 +7627,7 @@ public class PApplet implements PConstants {
    * @param list array to sort
    * @see PApplet#reverse(boolean[])
    */
-  static public byte[] sort(byte list[]) {
+  static public byte[] sort(byte[] list) {
     return sort(list, list.length);
   }
 
@@ -8216,7 +7641,7 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static public char[] sort(char list[]) {
+  static public char[] sort(char[] list) {
     return sort(list, list.length);
   }
 
@@ -8227,7 +7652,7 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static public int[] sort(int list[]) {
+  static public int[] sort(int[] list) {
     return sort(list, list.length);
   }
 
@@ -8238,7 +7663,7 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static public float[] sort(float list[]) {
+  static public float[] sort(float[] list) {
     return sort(list, list.length);
   }
 
@@ -8249,7 +7674,7 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static public String[] sort(String list[]) {
+  static public String[] sort(String[] list) {
     return sort(list, list.length);
   }
 
@@ -8356,85 +7781,85 @@ public class PApplet implements PConstants {
    * @param list the array to expand
    * @see PApplet#shorten(boolean[])
    */
-  static public boolean[] expand(boolean list[]) {
+  static public boolean[] expand(boolean[] list) {
     return expand(list, list.length > 0 ? list.length << 1 : 1);
   }
 
   /**
    * @param newSize new size for the array
    */
-  static public boolean[] expand(boolean list[], int newSize) {
-    boolean temp[] = new boolean[newSize];
+  static public boolean[] expand(boolean[] list, int newSize) {
+    boolean[] temp = new boolean[newSize];
     System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
     return temp;
   }
 
-  static public byte[] expand(byte list[]) {
+  static public byte[] expand(byte[] list) {
     return expand(list, list.length > 0 ? list.length << 1 : 1);
   }
 
-  static public byte[] expand(byte list[], int newSize) {
-    byte temp[] = new byte[newSize];
+  static public byte[] expand(byte[] list, int newSize) {
+    byte[] temp = new byte[newSize];
     System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
     return temp;
   }
 
-  static public char[] expand(char list[]) {
+  static public char[] expand(char[] list) {
     return expand(list, list.length > 0 ? list.length << 1 : 1);
   }
 
-  static public char[] expand(char list[], int newSize) {
-    char temp[] = new char[newSize];
+  static public char[] expand(char[] list, int newSize) {
+    char[] temp = new char[newSize];
     System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
     return temp;
   }
 
-  static public int[] expand(int list[]) {
+  static public int[] expand(int[] list) {
     return expand(list, list.length > 0 ? list.length << 1 : 1);
   }
 
-  static public int[] expand(int list[], int newSize) {
-    int temp[] = new int[newSize];
+  static public int[] expand(int[] list, int newSize) {
+    int[] temp = new int[newSize];
     System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
     return temp;
   }
 
-  static public long[] expand(long list[]) {
+  static public long[] expand(long[] list) {
     return expand(list, list.length > 0 ? list.length << 1 : 1);
   }
 
-  static public long[] expand(long list[], int newSize) {
-    long temp[] = new long[newSize];
+  static public long[] expand(long[] list, int newSize) {
+    long[] temp = new long[newSize];
     System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
     return temp;
   }
 
-  static public float[] expand(float list[]) {
+  static public float[] expand(float[] list) {
     return expand(list, list.length > 0 ? list.length << 1 : 1);
   }
 
-  static public float[] expand(float list[], int newSize) {
-    float temp[] = new float[newSize];
+  static public float[] expand(float[] list, int newSize) {
+    float[] temp = new float[newSize];
     System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
     return temp;
   }
 
-  static public double[] expand(double list[]) {
+  static public double[] expand(double[] list) {
     return expand(list, list.length > 0 ? list.length << 1 : 1);
   }
 
-  static public double[] expand(double list[], int newSize) {
-    double temp[] = new double[newSize];
+  static public double[] expand(double[] list, int newSize) {
+    double[] temp = new double[newSize];
     System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
     return temp;
   }
 
-  static public String[] expand(String list[]) {
+  static public String[] expand(String[] list) {
     return expand(list, list.length > 0 ? list.length << 1 : 1);
   }
 
-  static public String[] expand(String list[], int newSize) {
-    String temp[] = new String[newSize];
+  static public String[] expand(String[] list, int newSize) {
+    String[] temp = new String[newSize];
     // in case the new size is smaller than list.length
     System.arraycopy(list, 0, temp, 0, Math.min(newSize, list.length));
     return temp;
@@ -8478,31 +7903,31 @@ public class PApplet implements PConstants {
    * @see PApplet#shorten(boolean[])
    * @see PApplet#expand(boolean[])
    */
-  static public byte[] append(byte array[], byte value) {
+  static public byte[] append(byte[] array, byte value) {
     array = expand(array, array.length + 1);
     array[array.length-1] = value;
     return array;
   }
 
-  static public char[] append(char array[], char value) {
+  static public char[] append(char[] array, char value) {
     array = expand(array, array.length + 1);
     array[array.length-1] = value;
     return array;
   }
 
-  static public int[] append(int array[], int value) {
+  static public int[] append(int[] array, int value) {
     array = expand(array, array.length + 1);
     array[array.length-1] = value;
     return array;
   }
 
-  static public float[] append(float array[], float value) {
+  static public float[] append(float[] array, float value) {
     array = expand(array, array.length + 1);
     array[array.length-1] = value;
     return array;
   }
 
-  static public String[] append(String array[], String value) {
+  static public String[] append(String[] array, String value) {
     array = expand(array, array.length + 1);
     array[array.length-1] = value;
     return array;
@@ -8532,27 +7957,27 @@ public class PApplet implements PConstants {
    * @see PApplet#append(byte[], byte)
    * @see PApplet#expand(boolean[])
    */
-  static public boolean[] shorten(boolean list[]) {
+  static public boolean[] shorten(boolean[] list) {
     return subset(list, 0, list.length-1);
   }
 
-  static public byte[] shorten(byte list[]) {
+  static public byte[] shorten(byte[] list) {
     return subset(list, 0, list.length-1);
   }
 
-  static public char[] shorten(char list[]) {
+  static public char[] shorten(char[] list) {
     return subset(list, 0, list.length-1);
   }
 
-  static public int[] shorten(int list[]) {
+  static public int[] shorten(int[] list) {
     return subset(list, 0, list.length-1);
   }
 
-  static public float[] shorten(float list[]) {
+  static public float[] shorten(float[] list) {
     return subset(list, 0, list.length-1);
   }
 
-  static public String[] shorten(String list[]) {
+  static public String[] shorten(String[] list) {
     return subset(list, 0, list.length-1);
   }
 
@@ -8582,9 +8007,9 @@ public class PApplet implements PConstants {
    * @see PApplet#concat(boolean[], boolean[])
    * @see PApplet#subset(boolean[], int, int)
    */
-  static final public boolean[] splice(boolean list[],
+  static final public boolean[] splice(boolean[] list,
                                        boolean value, int index) {
-    boolean outgoing[] = new boolean[list.length + 1];
+    boolean[] outgoing = new boolean[list.length + 1];
     System.arraycopy(list, 0, outgoing, 0, index);
     outgoing[index] = value;
     System.arraycopy(list, index, outgoing, index + 1,
@@ -8592,9 +8017,9 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static final public boolean[] splice(boolean list[],
-                                       boolean value[], int index) {
-    boolean outgoing[] = new boolean[list.length + value.length];
+  static final public boolean[] splice(boolean[] list,
+                                       boolean[] value, int index) {
+    boolean[] outgoing = new boolean[list.length + value.length];
     System.arraycopy(list, 0, outgoing, 0, index);
     System.arraycopy(value, 0, outgoing, index, value.length);
     System.arraycopy(list, index, outgoing, index + value.length,
@@ -8602,9 +8027,9 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static final public byte[] splice(byte list[],
+  static final public byte[] splice(byte[] list,
                                     byte value, int index) {
-    byte outgoing[] = new byte[list.length + 1];
+    byte[] outgoing = new byte[list.length + 1];
     System.arraycopy(list, 0, outgoing, 0, index);
     outgoing[index] = value;
     System.arraycopy(list, index, outgoing, index + 1,
@@ -8612,9 +8037,9 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static final public byte[] splice(byte list[],
-                                    byte value[], int index) {
-    byte outgoing[] = new byte[list.length + value.length];
+  static final public byte[] splice(byte[] list,
+                                    byte[] value, int index) {
+    byte[] outgoing = new byte[list.length + value.length];
     System.arraycopy(list, 0, outgoing, 0, index);
     System.arraycopy(value, 0, outgoing, index, value.length);
     System.arraycopy(list, index, outgoing, index + value.length,
@@ -8623,9 +8048,9 @@ public class PApplet implements PConstants {
   }
 
 
-  static final public char[] splice(char list[],
+  static final public char[] splice(char[] list,
                                     char value, int index) {
-    char outgoing[] = new char[list.length + 1];
+    char[] outgoing = new char[list.length + 1];
     System.arraycopy(list, 0, outgoing, 0, index);
     outgoing[index] = value;
     System.arraycopy(list, index, outgoing, index + 1,
@@ -8633,9 +8058,9 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static final public char[] splice(char list[],
-                                    char value[], int index) {
-    char outgoing[] = new char[list.length + value.length];
+  static final public char[] splice(char[] list,
+                                    char[] value, int index) {
+    char[] outgoing = new char[list.length + value.length];
     System.arraycopy(list, 0, outgoing, 0, index);
     System.arraycopy(value, 0, outgoing, index, value.length);
     System.arraycopy(list, index, outgoing, index + value.length,
@@ -8643,9 +8068,9 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static final public int[] splice(int list[],
+  static final public int[] splice(int[] list,
                                    int value, int index) {
-    int outgoing[] = new int[list.length + 1];
+    int[] outgoing = new int[list.length + 1];
     System.arraycopy(list, 0, outgoing, 0, index);
     outgoing[index] = value;
     System.arraycopy(list, index, outgoing, index + 1,
@@ -8653,9 +8078,9 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static final public int[] splice(int list[],
-                                   int value[], int index) {
-    int outgoing[] = new int[list.length + value.length];
+  static final public int[] splice(int[] list,
+                                   int[] value, int index) {
+    int[] outgoing = new int[list.length + value.length];
     System.arraycopy(list, 0, outgoing, 0, index);
     System.arraycopy(value, 0, outgoing, index, value.length);
     System.arraycopy(list, index, outgoing, index + value.length,
@@ -8663,9 +8088,9 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static final public float[] splice(float list[],
+  static final public float[] splice(float[] list,
                                      float value, int index) {
-    float outgoing[] = new float[list.length + 1];
+    float[] outgoing = new float[list.length + 1];
     System.arraycopy(list, 0, outgoing, 0, index);
     outgoing[index] = value;
     System.arraycopy(list, index, outgoing, index + 1,
@@ -8673,9 +8098,9 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static final public float[] splice(float list[],
-                                     float value[], int index) {
-    float outgoing[] = new float[list.length + value.length];
+  static final public float[] splice(float[] list,
+                                     float[] value, int index) {
+    float[] outgoing = new float[list.length + value.length];
     System.arraycopy(list, 0, outgoing, 0, index);
     System.arraycopy(value, 0, outgoing, index, value.length);
     System.arraycopy(list, index, outgoing, index + value.length,
@@ -8683,9 +8108,9 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static final public String[] splice(String list[],
+  static final public String[] splice(String[] list,
                                       String value, int index) {
-    String outgoing[] = new String[list.length + 1];
+    String[] outgoing = new String[list.length + 1];
     System.arraycopy(list, 0, outgoing, 0, index);
     outgoing[index] = value;
     System.arraycopy(list, index, outgoing, index + 1,
@@ -8693,9 +8118,9 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static final public String[] splice(String list[],
-                                      String value[], int index) {
-    String outgoing[] = new String[list.length + value.length];
+  static final public String[] splice(String[] list,
+                                      String[] value, int index) {
+    String[] outgoing = new String[list.length + value.length];
     System.arraycopy(list, 0, outgoing, 0, index);
     System.arraycopy(value, 0, outgoing, index, value.length);
     System.arraycopy(list, index, outgoing, index + value.length,
@@ -8876,43 +8301,43 @@ public class PApplet implements PConstants {
   * @see PApplet#splice(boolean[], boolean, int)
   * @see PApplet#arrayCopy(Object, int, Object, int, int)
   */
-  static public boolean[] concat(boolean a[], boolean b[]) {
-    boolean c[] = new boolean[a.length + b.length];
+  static public boolean[] concat(boolean[] a, boolean[] b) {
+    boolean[] c = new boolean[a.length + b.length];
     System.arraycopy(a, 0, c, 0, a.length);
     System.arraycopy(b, 0, c, a.length, b.length);
     return c;
   }
 
-  static public byte[] concat(byte a[], byte b[]) {
-    byte c[] = new byte[a.length + b.length];
+  static public byte[] concat(byte[] a, byte[] b) {
+    byte[] c = new byte[a.length + b.length];
     System.arraycopy(a, 0, c, 0, a.length);
     System.arraycopy(b, 0, c, a.length, b.length);
     return c;
   }
 
-  static public char[] concat(char a[], char b[]) {
-    char c[] = new char[a.length + b.length];
+  static public char[] concat(char[] a, char[] b) {
+    char[] c = new char[a.length + b.length];
     System.arraycopy(a, 0, c, 0, a.length);
     System.arraycopy(b, 0, c, a.length, b.length);
     return c;
   }
 
-  static public int[] concat(int a[], int b[]) {
-    int c[] = new int[a.length + b.length];
+  static public int[] concat(int[] a, int[] b) {
+    int[] c = new int[a.length + b.length];
     System.arraycopy(a, 0, c, 0, a.length);
     System.arraycopy(b, 0, c, a.length, b.length);
     return c;
   }
 
-  static public float[] concat(float a[], float b[]) {
-    float c[] = new float[a.length + b.length];
+  static public float[] concat(float[] a, float[] b) {
+    float[] c = new float[a.length + b.length];
     System.arraycopy(a, 0, c, 0, a.length);
     System.arraycopy(b, 0, c, a.length, b.length);
     return c;
   }
 
-  static public String[] concat(String a[], String b[]) {
-    String c[] = new String[a.length + b.length];
+  static public String[] concat(String[] a, String[] b) {
+    String[] c = new String[a.length + b.length];
     System.arraycopy(a, 0, c, 0, a.length);
     System.arraycopy(b, 0, c, a.length, b.length);
     return c;
@@ -8941,8 +8366,8 @@ public class PApplet implements PConstants {
   * @param list booleans[], bytes[], chars[], ints[], floats[], or Strings[]
   * @see PApplet#sort(String[], int)
   */
-  static public boolean[] reverse(boolean list[]) {
-    boolean outgoing[] = new boolean[list.length];
+  static public boolean[] reverse(boolean[] list) {
+    boolean[] outgoing = new boolean[list.length];
     int length1 = list.length - 1;
     for (int i = 0; i < list.length; i++) {
       outgoing[i] = list[length1 - i];
@@ -8950,8 +8375,8 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static public byte[] reverse(byte list[]) {
-    byte outgoing[] = new byte[list.length];
+  static public byte[] reverse(byte[] list) {
+    byte[] outgoing = new byte[list.length];
     int length1 = list.length - 1;
     for (int i = 0; i < list.length; i++) {
       outgoing[i] = list[length1 - i];
@@ -8959,8 +8384,8 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static public char[] reverse(char list[]) {
-    char outgoing[] = new char[list.length];
+  static public char[] reverse(char[] list) {
+    char[] outgoing = new char[list.length];
     int length1 = list.length - 1;
     for (int i = 0; i < list.length; i++) {
       outgoing[i] = list[length1 - i];
@@ -8968,8 +8393,8 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static public int[] reverse(int list[]) {
-    int outgoing[] = new int[list.length];
+  static public int[] reverse(int[] list) {
+    int[] outgoing = new int[list.length];
     int length1 = list.length - 1;
     for (int i = 0; i < list.length; i++) {
       outgoing[i] = list[length1 - i];
@@ -8977,8 +8402,8 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static public float[] reverse(float list[]) {
-    float outgoing[] = new float[list.length];
+  static public float[] reverse(float[] list) {
+    float[] outgoing = new float[list.length];
     int length1 = list.length - 1;
     for (int i = 0; i < list.length; i++) {
       outgoing[i] = list[length1 - i];
@@ -8986,8 +8411,8 @@ public class PApplet implements PConstants {
     return outgoing;
   }
 
-  static public String[] reverse(String list[]) {
-    String outgoing[] = new String[list.length];
+  static public String[] reverse(String[] list) {
+    String[] outgoing = new String[list.length];
     int length1 = list.length - 1;
     for (int i = 0; i < list.length; i++) {
       outgoing[i] = list[length1 - i];
@@ -9110,7 +8535,7 @@ public class PApplet implements PConstants {
    */
   static public String[] splitTokens(String value, String delim) {
     StringTokenizer toker = new StringTokenizer(value, delim);
-    String pieces[] = new String[toker.countTokens()];
+    String[] pieces = new String[toker.countTokens()];
 
     int index = 0;
     while (toker.hasMoreTokens()) {
@@ -9160,10 +8585,10 @@ public class PApplet implements PConstants {
     if (value == null) return null;
     //return split(what, String.valueOf(delim));  // huh
 
-    char chars[] = value.toCharArray();
+    char[] chars = value.toCharArray();
     int splitCount = 0; //1;
-    for (int i = 0; i < chars.length; i++) {
-      if (chars[i] == delim) splitCount++;
+    for (char ch : chars) {
+      if (ch == delim) splitCount++;
     }
     // make sure that there is something in the input string
     //if (chars.length > 0) {
@@ -9172,12 +8597,12 @@ public class PApplet implements PConstants {
       // on second thought, i don't agree with this, will disable
     //}
     if (splitCount == 0) {
-      String splits[] = new String[1];
+      String[] splits = new String[1];
       splits[0] = value;
       return splits;
     }
     //int pieceCount = splitCount + 1;
-    String splits[] = new String[splitCount + 1];
+    String[] splits = new String[splitCount + 1];
     int splitIndex = 0;
     int startIndex = 0;
     for (int i = 0; i < chars.length; i++) {
@@ -9418,8 +8843,8 @@ public class PApplet implements PConstants {
    * to zero will return false, and any other value will return true.
    * @return array of boolean elements
    */
-  static final public boolean[] parseBoolean(int what[]) {
-    boolean outgoing[] = new boolean[what.length];
+  static final public boolean[] parseBoolean(int[] what) {
+    boolean[] outgoing = new boolean[what.length];
     for (int i = 0; i < what.length; i++) {
       outgoing[i] = (what[i] != 0);
     }
@@ -9437,8 +8862,8 @@ public class PApplet implements PConstants {
   }
   */
 
-  static final public boolean[] parseBoolean(String what[]) {
-    boolean outgoing[] = new boolean[what.length];
+  static final public boolean[] parseBoolean(String[] what) {
+    boolean[] outgoing = new boolean[what.length];
     for (int i = 0; i < what.length; i++) {
       outgoing[i] = Boolean.parseBoolean(what[i]);
     }
@@ -9472,32 +8897,32 @@ public class PApplet implements PConstants {
 
   // . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
 
-  static final public byte[] parseByte(boolean what[]) {
-    byte outgoing[] = new byte[what.length];
+  static final public byte[] parseByte(boolean[] what) {
+    byte[] outgoing = new byte[what.length];
     for (int i = 0; i < what.length; i++) {
       outgoing[i] = what[i] ? (byte)1 : 0;
     }
     return outgoing;
   }
 
-  static final public byte[] parseByte(char what[]) {
-    byte outgoing[] = new byte[what.length];
+  static final public byte[] parseByte(char[] what) {
+    byte[] outgoing = new byte[what.length];
     for (int i = 0; i < what.length; i++) {
       outgoing[i] = (byte) what[i];
     }
     return outgoing;
   }
 
-  static final public byte[] parseByte(int what[]) {
-    byte outgoing[] = new byte[what.length];
+  static final public byte[] parseByte(int[] what) {
+    byte[] outgoing = new byte[what.length];
     for (int i = 0; i < what.length; i++) {
       outgoing[i] = (byte) what[i];
     }
     return outgoing;
   }
 
-  static final public byte[] parseByte(float what[]) {
-    byte outgoing[] = new byte[what.length];
+  static final public byte[] parseByte(float[] what) {
+    byte[] outgoing = new byte[what.length];
     for (int i = 0; i < what.length; i++) {
       outgoing[i] = (byte) what[i];
     }
@@ -9552,8 +8977,8 @@ public class PApplet implements PConstants {
   }
   */
 
-  static final public char[] parseChar(byte what[]) {
-    char outgoing[] = new char[what.length];
+  static final public char[] parseChar(byte[] what) {
+    char[] outgoing = new char[what.length];
     for (int i = 0; i < what.length; i++) {
       outgoing[i] = (char) (what[i] & 0xff);
     }
@@ -9569,8 +8994,8 @@ public class PApplet implements PConstants {
   }
 
   /*
-  static final public char[] parseChar(float what[]) {  // nonsensical
-    char outgoing[] = new char[what.length];
+  static final public char[] parseChar(int[] what) {
+    char[] outgoing = new char[what.length];
     for (int i = 0; i < what.length; i++) {
       outgoing[i] = (char) what[i];
     }
@@ -9640,32 +9065,32 @@ public class PApplet implements PConstants {
 
   // . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
 
-  static final public int[] parseInt(boolean what[]) {
-    int list[] = new int[what.length];
+  static final public int[] parseInt(boolean[] what) {
+    int[] list = new int[what.length];
     for (int i = 0; i < what.length; i++) {
       list[i] = what[i] ? 1 : 0;
     }
     return list;
   }
 
-  static final public int[] parseInt(byte what[]) {  // note this unsigns
-    int list[] = new int[what.length];
+  static final public int[] parseInt(byte[] what) {  // note this unsigns
+    int[] list = new int[what.length];
     for (int i = 0; i < what.length; i++) {
       list[i] = (what[i] & 0xff);
     }
     return list;
   }
 
-  static final public int[] parseInt(char what[]) {
-    int list[] = new int[what.length];
+  static final public int[] parseInt(char[] what) {
+    int[] list = new int[what.length];
     for (int i = 0; i < what.length; i++) {
       list[i] = what[i];
     }
     return list;
   }
 
-  static public int[] parseInt(float what[]) {
-    int inties[] = new int[what.length];
+  static public int[] parseInt(float[] what) {
+    int[] inties = new int[what.length];
     for (int i = 0; i < what.length; i++) {
       inties[i] = (int)what[i];
     }
@@ -9681,7 +9106,7 @@ public class PApplet implements PConstants {
    *
    * numbers will contain { 1, 300, 44 }
    */
-  static public int[] parseInt(String what[]) {
+  static public int[] parseInt(String[] what) {
     return parseInt(what, 0);
   }
 
@@ -9695,8 +9120,8 @@ public class PApplet implements PConstants {
    *
    * numbers will contain { 1, 300, 9999, 44 }
    */
-  static public int[] parseInt(String what[], int missing) {
-    int output[] = new int[what.length];
+  static public int[] parseInt(String[] what, int missing) {
+    int[] output = new int[what.length];
     for (int i = 0; i < what.length; i++) {
       try {
         output[i] = Integer.parseInt(what[i]);
@@ -9737,46 +9162,28 @@ public class PApplet implements PConstants {
 
   // . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
 
-  /*
-  static final public float[] parseFloat(boolean what[]) {
-    float floaties[] = new float[what.length];
-    for (int i = 0; i < what.length; i++) {
-      floaties[i] = what[i] ? 1 : 0;
-    }
-    return floaties;
-  }
-
-  static final public float[] parseFloat(char what[]) {
-    float floaties[] = new float[what.length];
-    for (int i = 0; i < what.length; i++) {
-      floaties[i] = (char) what[i];
-    }
-    return floaties;
-  }
-  */
-
-  static final public float[] parseFloat(byte what[]) {
-    float floaties[] = new float[what.length];
+  static final public float[] parseFloat(byte[] what) {
+    float[] floaties = new float[what.length];
     for (int i = 0; i < what.length; i++) {
       floaties[i] = what[i];
     }
     return floaties;
   }
 
-  static final public float[] parseFloat(int what[]) {
-    float floaties[] = new float[what.length];
+  static final public float[] parseFloat(int[] what) {
+    float[] floaties = new float[what.length];
     for (int i = 0; i < what.length; i++) {
       floaties[i] = what[i];
     }
     return floaties;
   }
 
-  static final public float[] parseFloat(String what[]) {
+  static final public float[] parseFloat(String[] what) {
     return parseFloat(what, Float.NaN);
   }
 
-  static final public float[] parseFloat(String what[], float missing) {
-    float output[] = new float[what.length];
+  static final public float[] parseFloat(String[] what, float missing) {
+    float[] output = new float[what.length];
     for (int i = 0; i < what.length; i++) {
       try {
         output[i] = Float.parseFloat(what[i]);
@@ -9811,32 +9218,32 @@ public class PApplet implements PConstants {
 
   // . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . .
 
-  static final public String[] str(boolean x[]) {
-    String s[] = new String[x.length];
+  static final public String[] str(boolean[] x) {
+    String[] s = new String[x.length];
     for (int i = 0; i < x.length; i++) s[i] = String.valueOf(x[i]);
     return s;
   }
 
-  static final public String[] str(byte x[]) {
-    String s[] = new String[x.length];
+  static final public String[] str(byte[] x) {
+    String[] s = new String[x.length];
     for (int i = 0; i < x.length; i++) s[i] = String.valueOf(x[i]);
     return s;
   }
 
-  static final public String[] str(char x[]) {
-    String s[] = new String[x.length];
+  static final public String[] str(char[] x) {
+    String[] s = new String[x.length];
     for (int i = 0; i < x.length; i++) s[i] = String.valueOf(x[i]);
     return s;
   }
 
-  static final public String[] str(int x[]) {
-    String s[] = new String[x.length];
+  static final public String[] str(int[] x) {
+    String[] s = new String[x.length];
     for (int i = 0; i < x.length; i++) s[i] = String.valueOf(x[i]);
     return s;
   }
 
-  static final public String[] str(float x[]) {
-    String s[] = new String[x.length];
+  static final public String[] str(float[] x) {
+    String[] s = new String[x.length];
     for (int i = 0; i < x.length; i++) s[i] = String.valueOf(x[i]);
     return s;
   }
@@ -9893,8 +9300,8 @@ public class PApplet implements PConstants {
    * @see <a href="https://processing.org/reference/intconvert_.html">int(float)</a>
    */
 
-  static public String[] nf(int nums[], int digits) {
-    String formatted[] = new String[nums.length];
+  static public String[] nf(int[] nums, int digits) {
+    String[] formatted = new String[nums.length];
     for (int i = 0; i < formatted.length; i++) {
       formatted[i] = nf(nums[i], digits);
     }
@@ -9937,8 +9344,8 @@ public class PApplet implements PConstants {
    * @see PApplet#nfp(float, int, int)
    * @see PApplet#nfs(float, int, int)
    */
-  static public String[] nfc(int nums[]) {
-    String formatted[] = new String[nums.length];
+  static public String[] nfc(int[] nums) {
+    String[] formatted = new String[nums.length];
     for (int i = 0; i < formatted.length; i++) {
       formatted[i] = nfc(nums[i]);
     }
@@ -9997,8 +9404,8 @@ public class PApplet implements PConstants {
   /**
    * @param nums the numbers to format
    */
-  static public String[] nfs(int nums[], int digits) {
-    String formatted[] = new String[nums.length];
+  static public String[] nfs(int[] nums, int digits) {
+    String[] formatted = new String[nums.length];
     for (int i = 0; i < formatted.length; i++) {
       formatted[i] = nfs(nums[i], digits);
     }
@@ -10035,8 +9442,8 @@ public class PApplet implements PConstants {
   /**
    * @param nums the numbers to format
    */
-  static public String[] nfp(int nums[], int digits) {
-    String formatted[] = new String[nums.length];
+  static public String[] nfp(int[] nums, int digits) {
+    String[] formatted = new String[nums.length];
     for (int i = 0; i < formatted.length; i++) {
       formatted[i] = nfp(nums[i], digits);
     }
@@ -10057,8 +9464,8 @@ public class PApplet implements PConstants {
    * @param left number of digits to the left of the decimal point
    * @param right number of digits to the right of the decimal point
    */
-  static public String[] nf(float nums[], int left, int right) {
-    String formatted[] = new String[nums.length];
+  static public String[] nf(float[] nums, int left, int right) {
+    String[] formatted = new String[nums.length];
     for (int i = 0; i < formatted.length; i++) {
       formatted[i] = nf(nums[i], left, right);
     }
@@ -10090,8 +9497,8 @@ public class PApplet implements PConstants {
   /**
    * @param right number of digits to the right of the decimal point
   */
-  static public String[] nfc(float nums[], int right) {
-    String formatted[] = new String[nums.length];
+  static public String[] nfc(float[] nums, int right) {
+    String[] formatted = new String[nums.length];
     for (int i = 0; i < formatted.length; i++) {
       formatted[i] = nfc(nums[i], right);
     }
@@ -10124,8 +9531,8 @@ public class PApplet implements PConstants {
   * @param left the number of digits to the left of the decimal point
   * @param right the number of digits to the right of the decimal point
   */
-  static public String[] nfs(float nums[], int left, int right) {
-    String formatted[] = new String[nums.length];
+  static public String[] nfs(float[] nums, int left, int right) {
+    String[] formatted = new String[nums.length];
     for (int i = 0; i < formatted.length; i++) {
       formatted[i] = nfs(nums[i], left, right);
     }
@@ -10140,8 +9547,8 @@ public class PApplet implements PConstants {
   * @param left the number of digits to the left of the decimal point
   * @param right the number of digits to the right of the decimal point
   */
-  static public String[] nfp(float nums[], int left, int right) {
-    String formatted[] = new String[nums.length];
+  static public String[] nfp(float[] nums, int left, int right) {
+    String[] formatted = new String[nums.length];
     for (int i = 0; i < formatted.length; i++) {
       formatted[i] = nfp(nums[i], left, right);
     }
@@ -10619,36 +10026,12 @@ public class PApplet implements PConstants {
   }
 
 
-  // Moving this back off the EDT for alpha 10. Not sure if we're helping or
-  // hurting, but unless we do, errors inside settings() are never passed
+  // Moving this back off the EDT for 3.0 alpha 10. Not sure if we're helping
+  // or hurting, but unless we do, errors inside settings() are never passed
   // through to the PDE. There are other ways around that, no doubt, but I'm
   // also suspecting that these "not showing up" bugs might be EDT issues.
   static public void runSketch(final String[] args,
                                final PApplet constructedSketch) {
-//    EventQueue.invokeLater(new Runnable() {
-//      public void run() {
-//        runSketchEDT(args, constructedSketch);
-//      }
-//    });
-//  }
-//
-//
-//  /**
-//   * Moving this to the EDT for 3.0a6 because that's the proper thing to do
-//   * when messing with Swing components. But mostly we're AWT, so who knows.
-//   */
-//  static protected void runSketchEDT(final String[] args,
-//                                     final PApplet constructedSketch) {
-    // Supposed to help with flicker, but no effect on OS X.
-    // TODO IIRC this helped on Windows, but need to double check.
-    System.setProperty("sun.awt.noerasebackground", "true");
-
-    // Remove 60fps limit on the JavaFX "pulse" timer
-    System.setProperty("javafx.animation.fullspeed", "true");
-
-    // Doesn't seem to do anything helpful here (that can't be done via Runner)
-    //System.setProperty("com.apple.mrj.application.apple.menu.about.name", "potato");
-
     Thread.setDefaultUncaughtExceptionHandler(new Thread.UncaughtExceptionHandler() {
       public void uncaughtException(Thread t, Throwable e) {
         e.printStackTrace();
@@ -10676,16 +10059,6 @@ public class PApplet implements PConstants {
       }
     }
     */
-
-    // Catch any HeadlessException to provide more useful feedback
-    try {
-      // Call validate() while resize events are in progress
-      Toolkit.getDefaultToolkit().setDynamicLayout(true);
-    } catch (HeadlessException e) {
-      System.err.println("Cannot run sketch without a display. Read this for possible solutions:");
-      System.err.println("https://github.com/processing/processing/wiki/Running-without-a-Display");
-      System.exit(1);
-    }
 
     // So that the system proxy setting are used by default
     System.setProperty("java.net.useSystemProxies", "true");
@@ -10732,6 +10105,9 @@ public class PApplet implements PConstants {
             System.err.println(value + " is not a valid choice for " + ARGS_DISPLAY);
             displayNum = -1;  // use the default
           }
+
+        } else if (param.equals(ARGS_DISABLE_AWT)) {
+          disableAWT = true;
 
         } else if (param.equals(ARGS_WINDOW_COLOR)) {
           if (value.charAt(0) == '#' && value.length() == 7) {
@@ -10786,16 +10162,9 @@ public class PApplet implements PConstants {
       argIndex++;
     }
 
-//    // Now that sketch path is passed in args after the sketch name
-//    // it's not set in the above loop(the above loop breaks after
-//    // finding sketch name). So setting sketch path here.
-//    // https://github.com/processing/processing/commit/0a14835e6f5f4766b022e73a8fe562318636727c
-//    // TODO this is a hack added for PDE X and needs to be removed [fry 141104]
-//    for (int i = 0; i < args.length; i++) {
-//      if (args[i].startsWith(ARGS_SKETCH_FOLDER)){
-//        folder = args[i].substring(args[i].indexOf('=') + 1);
-//      }
-//    }
+    if (!disableAWT) {
+      ShimAWT.initRun();
+    }
 
     final PApplet sketch;
     if (constructedSketch != null) {
@@ -10814,14 +10183,16 @@ public class PApplet implements PConstants {
       }
     }
 
-    if (platform == MACOS) {
+    // TODO When disabling AWT for LWJGL or others, we need to figure out
+    // how to make Cmd-Q and the rest of this still work properly.
+    if (platform == MACOS && !disableAWT) {
       try {
         final String td = "processing.core.ThinkDifferent";
         Class<?> thinkDifferent =
           Thread.currentThread().getContextClassLoader().loadClass(td);
         Method method =
-          thinkDifferent.getMethod("init", new Class[] { PApplet.class });
-        method.invoke(null, new Object[] { sketch });
+          thinkDifferent.getMethod("init", PApplet.class);
+        method.invoke(null, sketch);
       } catch (Exception e) {
         e.printStackTrace();  // That's unfortunate
       }
@@ -10854,25 +10225,7 @@ public class PApplet implements PConstants {
     }
 
     // Call the settings() method which will give us our size() call
-//    try {
     sketch.handleSettings();
-//    } catch (Throwable t) {
-//      System.err.println("I think I'm gonna hurl");
-//    }
-
-////    sketch.spanDisplays = spanDisplays;
-//    // If spanning screens, that means we're also full screen.
-////    fullScreen |= spanDisplays;
-//    if (spanDisplays) {
-//      displayIndex = SPAN;
-////      fullScreen = true;
-//    }
-
-//    // If the applet doesn't call for full screen, but the command line does,
-//    // enable it. Conversely, if the command line does not, don't disable it.
-//    // Query the applet to see if it wants to be full screen all the time.
-//    //fullScreen |= sketch.sketchFullScreen();
-//    sketch.fullScreen |= fullScreen;
 
     sketch.external = external;
 
@@ -10881,22 +10234,6 @@ public class PApplet implements PConstants {
     }
 
     final PSurface surface = sketch.initSurface();
-//      sketch.initSurface(windowColor, displayIndex, fullScreen, spanDisplays);
-
-    /*
-    // Wait until the applet has figured out its width. In a static mode app,
-    // everything happens inside setup(), so this will be after setup() has
-    // completed, and the empty draw() has set "finished" to true.
-    while (sketch.defaultSize && !sketch.finished) {
-      //System.out.println("default size");
-      try {
-        Thread.sleep(5);
-
-      } catch (InterruptedException e) {
-        //System.out.println("interrupt");
-      }
-    }
-    */
 
     if (present) {
       if (hideStop) {
@@ -10915,14 +10252,6 @@ public class PApplet implements PConstants {
 
     sketch.showSurface();
     sketch.startSurface();
-    /*
-    if (sketch.getGraphics().displayable()) {
-      surface.setVisible(true);
-    }
-
-    //sketch.init();
-    surface.startThread();
-    */
   }
 
 
@@ -10946,61 +10275,63 @@ public class PApplet implements PConstants {
 
     // Create fake Frame object to warn user about the changes
     if (g.displayable()) {
-      frame = new Frame() {
-        @Override
-        public void setResizable(boolean resizable) {
-          deprecationWarning("setResizable");
-          surface.setResizable(resizable);
-        }
+      /*
+      if (!disableAWT) {
+        frame = new Frame() {
+          @Override
+          public void setResizable(boolean resizable) {
+            deprecationWarning("setResizable");
+            surface.setResizable(resizable);
+          }
 
-        @Override
-        public void setVisible(boolean visible) {
-          deprecationWarning("setVisible");
-          surface.setVisible(visible);
-        }
+          @Override
+          public void setVisible(boolean visible) {
+            deprecationWarning("setVisible");
+            surface.setVisible(visible);
+          }
 
-        @Override
-        public void setTitle(String title) {
-          deprecationWarning("setTitle");
-          surface.setTitle(title);
-        }
+          @Override
+          public void setTitle(String title) {
+            deprecationWarning("setTitle");
+            surface.setTitle(title);
+          }
 
-        @Override
-        public void setUndecorated(boolean ignored) {
-          throw new RuntimeException("'frame' has been removed from Processing 3, " +
-            "use fullScreen() to get an undecorated full screen frame");
-        }
+          @Override
+          public void setUndecorated(boolean ignored) {
+            throw new RuntimeException("'frame' has been removed from Processing 3, " +
+              "use fullScreen() to get an undecorated full screen frame");
+          }
+          */
+          /*
+          // Can't override this one because it's called by Window's constructor
+          @Override
+          public void setLocation(int x, int y) {
+            deprecationWarning("setLocation");
+            surface.setLocation(x, y);
+          }
+          */
+          /*
+          @Override
+          public void setSize(int w, int h) {
+            deprecationWarning("setSize");
+            surface.setSize(w, h);
+          }
 
-        // Can't override this one because it's called by Window's constructor
-        /*
-        @Override
-        public void setLocation(int x, int y) {
-          deprecationWarning("setLocation");
-          surface.setLocation(x, y);
-        }
-        */
-
-        @Override
-        public void setSize(int w, int h) {
-          deprecationWarning("setSize");
-          surface.setSize(w, h);
-        }
-
-        private void deprecationWarning(String method) {
-          PGraphics.showWarning("Use surface." + method + "() instead of " +
-                                "frame." + method + " in Processing 3");
-          //new Exception(method).printStackTrace(System.out);
-        }
-      };
-
-      surface.initFrame(this); //, backgroundColor, displayNum, fullScreen, spanDisplays);
+          private void deprecationWarning(String method) {
+            PGraphics.showWarning("Use surface." + method + "() instead of " +
+                                  "frame." + method + " in Processing 3");
+            //new Exception(method).printStackTrace(System.out);
+          }
+        };
+      }
+      */
+      surface.initFrame(this);
       surface.setTitle(getClass().getSimpleName());
 
     } else {
       surface.initOffscreen(this);  // for PDF/PSurfaceNone and friends
     }
 
-//    init();
     return surface;
   }
 
@@ -15578,6 +14909,28 @@ public class PApplet implements PConstants {
    */
   static public void showMissingWarning(String method) {
     PGraphics.showMissingWarning(method);
+  }
+
+
+  /**
+   * Save a PImage to a path using ImageIO.
+   *
+   * @param image The image to be saved.
+   * @param path The path to which it should be saved.
+   * @return True if successful and false otherwise.
+   * @throws IOException
+   */
+  static public boolean saveViaImageIO(PImage image, String path) throws IOException {
+    return PGraphics.saveViaImageIO(image, path);
+  }
+
+
+  /**
+   * Check the alpha on an image, using a really primitive loop.
+   */
+  public void checkAlpha() {
+    if (recorder != null) recorder.checkAlpha();
+    g.checkAlpha();
   }
 
 
